Colab을 통해 생성됨

--- a/9_6_세션_문제_풀이_Numpy_exercises.ipynb
+++ b/9_6_세션_문제_풀이_Numpy_exercises.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "collapsed_sections": [
         "51898680"
-      ]
+      ],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
@@ -17,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yoooobin/ESAA/blob/main/9_6_%EC%84%B8%EC%85%98_%EB%AC%B8%EC%A0%9C_%ED%92%80%EC%9D%B4_Numpy_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
