Colab을 통해 생성됨

--- a/9_6_세션_문제_풀이_Numpy_exercises.ipynb
+++ b/9_6_세션_문제_풀이_Numpy_exercises.ipynb
@@ -119,26 +119,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fbbefe3-a34a-4d52-a053-15587809c5e9"
+        "outputId": "14bd940b-2815-4e97-a5b7-0235c730a202"
       },
       "source": [
         "import numpy as np\n",
-        "\n",
-        "A = np.arange(10)\n",
-        "print(A)\n",
-        "A[(3<A)&(A<8)] = A[(3<A)&(A<8)]*-1\n",
-        "print(A)"
+        "a = np.arange(10)\n",
+        "a[(a>3)&(a<8)] = a[(a>3)&(a<8)]*-1\n",
+        "a"
       ],
       "id": "51c90f2d",
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0 1 2 3 4 5 6 7 8 9]\n",
-            "[ 0  1  2  3 -4 -5 -6 -7  8  9]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3, -4, -5, -6, -7,  8,  9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
         }
       ]
     },
