Colab을 통해 생성됨

--- a/ESAA_OB_week12_1_markdown.ipynb
+++ b/ESAA_OB_week12_1_markdown.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBtonjdZqsJATBRPKmO0y1",
+      "authorship_tag": "ABX9TyMA5CtlHgV0Nq1oW1Leuihe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,7 +390,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. 옵티마이저를 위한 경사 하강법은 Adam을 사용함. 학습률을 의미하는 lr은 0.001dmf tkdyd"
+        "1. 옵티마이저를 위한 경사 하강법은 Adam을 사용함. 학습률을 의미하는 lr은 0.001을 사용"
       ],
       "metadata": {
         "id": "bQCXNkmte9o5"
